--- a/app/sass/_libs.sass
+++ b/app/sass/_libs.sass
@@ -1,2 +1,5 @@
 @import "app/libs/bootstrap-grid/bootstrap-grid"
 @import "app/libs/animate/animate"
+
+@import "app/libs/owl-carousel/owl.carousel"
+@import "app/libs/font-awesome-4.6.3/css/font-awesome"
