--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -34,6 +34,7 @@ body
 	font-family: Gotham
 	overflow-x: hidden
 	color: #555
+	box-sizing: border-box
 
 a
   text-decoration: none
@@ -41,6 +42,7 @@ a
   -webkit-transition: all 0.2s ease
   transition: all 0.2s ease
   outline: none
+  color: #12a54a
   
   &:hover, &:active, &:focus
     text-decoration: none
@@ -97,7 +99,7 @@ ul, li
 .button_green
 	padding: 0 45px
 	height: 40px
-	background-color: #fff
+	background-color: transparent
 	text-align: center
 	border-radius: 2px
 	border: 2px solid #12a54a
@@ -114,7 +116,7 @@ ul, li
 		background-color: #12a54a
   
 section
-	padding: 40px 0
+	padding: 50px 0
 
 .container
 	width: 1210px
@@ -132,7 +134,7 @@ section
 	margin-bottom: -8px
 	.main_inform_item
 		width: 669px
-		margin-top: 30px
+		margin-top: 10px
 		opacity: 0.94
 		background-color: white
 		padding: 35px
@@ -161,7 +163,24 @@ section
 
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 @import "step_1"
 @import "step_2"
 @import "slider"
+@import "footer"
 @import "media" // Всегда в конце
