--- a/app/sass/_slider.sass
+++ b/app/sass/_slider.sass
@@ -4,7 +4,7 @@
 	background-size: cover
 	background-position: right
 	background-repeat: no-repeat
-	padding: 50px 0
+	padding: 45px 0
 	
 
 .slider_wr
@@ -29,6 +29,8 @@
 			font-size: 15px
 			display: block
 			text-align: center
+			font-weight: 500
+			color: #848484
 		a.button_green
 			display: table
 			margin: 20px auto	30px	
