--- a/app/sass/_step_1.sass
+++ b/app/sass/_step_1.sass
@@ -34,6 +34,7 @@
 			margin-top: 8px
 			line-height: 25px
 			margin-bottom: 0	
+			font-size: 15px
 		.step_item_img
 			height: 70px
 			position: relative
