--- a/app/sass/_footer.sass
+++ b/app/sass/_footer.sass
@@ -23,7 +23,7 @@ footer
 .conect_wr
 	display: inline-block
 	width: calc(100% + 100px)
-	padding-left: 120px
+	padding-left: 100px
 	span
 		color: #010101
 		font-size: 19px
@@ -53,7 +53,7 @@ footer
 .newsletter_wr
 	display: inline-block
 	margin-top: 30px
-	padding-left: 120px
+	padding-left: 100px
 	width: calc(100% + 100px)	
 	span
 		color: #010101
@@ -99,5 +99,6 @@ footer
 		font-size: 13px
 		a
 			text-decoration: underline
+			text-transform: uppercase
 		a:first-child
 			margin-left: 20px
