--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -90,14 +90,14 @@ ul, li
 	color: #fff
 	font-size: 15px
 	text-transform: uppercase
-	
+	font-weight: 500
 	outline: none
 	&:hover
 		color: #fff
 		background-color: #ffc36a
 
 .button_green
-	padding: 0 45px
+	padding: 0 40px
 	height: 40px
 	background-color: transparent
 	text-align: center
@@ -109,17 +109,16 @@ ul, li
 	color: #12a54a
 	font-size: 15px
 	text-transform: uppercase
-	
+	font-weight: 500
 	outline: none
 	&:hover
 		color: #fff
 		background-color: #12a54a
   
 section
-	padding: 50px 0
+	padding: 40px 0
 
-.container
-	width: 1210px
+
 
 
 
@@ -132,9 +131,11 @@ section
 	background-position: right
 	background-repeat: no-repeat
 	margin-bottom: -8px
+	padding: 45px 0
+
 	.main_inform_item
 		width: 669px
-		margin-top: 10px
+		margin-top: 23px
 		opacity: 0.94
 		background-color: white
 		padding: 35px
@@ -157,6 +158,71 @@ section
 	display: inline-block
 	width: 100%
 	margin-bottom: -6px
+	padding: 28px 0
+
+
+
+
+.question_form
+	width: 580px
+	padding: 15px
+
+	display: table
+	margin: 0 auto
+	background-color: #ededed
+	input
+		width: 100%
+		height: 42px
+		line-height: 42px
+		padding: 0 10px
+		color: #7d7d7d
+		font-size: 15px
+		border: none
+		margin-bottom: 5px
+		
+		&.w_50
+			width: calc(50% - 2.5px)
+			margin-right: 5px
+		&.w_50:nth-child(2n)
+			margin-right: 0	
+
+
+	textarea
+		width: 100%
+		height: 82px
+		resize: none
+		padding: 10px 10px
+		color: #7d7d7d
+		font-size: 15px
+		border: none
+		margin-bottom: 5px
+		margin-right: 5px	
+	p		
+		margin: 0
+		display: inline-block
+		float: left
+		color: #7d7d7d
+		font-size: 13px
+		margin-top: 5px
+		margin-bottom: 20px
+		span
+			font-weight: 500
+			display: block
+	.button
+		float: right
+		margin-top: 5px	
+		line-height: 36px	
+
+.ready
+	padding: 45px 0
+	.descript
+		padding: 0
+		text-align: center
+	.button
+		display: table
+		margin: 0 auto	
+	.title
+		margin-bottom: 8px	
 
 
 
@@ -166,19 +232,7 @@ section
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
+@import "header"
 @import "step_1"
 @import "step_2"
 @import "slider"
